--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,13 @@
     03.ABOUT
     04.GALLERY
     05.SERVICE
-    06.PRICING
-    07.TESTIMONIAL
-    08.BRAND
-    09.BL0G
-    10.CONTACT
-    11.FOOTER
-    12.PAGE BANNER
-    13.BL0G DETAILS
+    06.TESTIMONIAL
+    07.BRAND
+    08.NEWSROOM
+    09.CONTACT
+    10.FOOTER
+    11.PAGE BANNER
+    12.NEWSROOM DETAILS
 
 -----------------------------------------------------------------------------------*/
 
